--- a/css/main.css
+++ b/css/main.css
@@ -3,17 +3,21 @@
         display: flex;
 }
 
+
 .md-1 {
     width: 30%
 }
+
 
 .md-2 {
     width: 70%
 }
 
-#map {
+
+.my-map {
     height: 600px;
 }
+
 
 .search {
     width: 97%;
@@ -23,6 +27,7 @@
     border-color: gray;
     position: relative;
 }
+
 
 .search-icon {
     width: 30px;
@@ -37,11 +42,13 @@
     padding-left: 2px;
 }
 
+
 .search-input {
     width: 100%;
     height: 30px;
     border: none;
 }
+
 
 .marked-places {
     position: absolute;
@@ -55,6 +62,7 @@
     width: 23%;
 }
 
+
 .visited {
     color: black;
     padding: 12px 16px;
@@ -64,9 +72,11 @@
     cursor: pointer;
 }
 
+
 .visited:hover{
     background-color: #f1f1f1
 }
+
 
 .up-btn {
     position: absolute;
@@ -76,9 +86,11 @@
 
 }
 
+
 table {
     width: 100%;
 }
+
 
 @media all and (max-width: 750px){
     .container {
@@ -99,6 +111,7 @@ table {
     }
 }
 
+
 @media all and (min-width: 970px){
     .container {
         width: 970px;
@@ -108,12 +121,15 @@ table {
     .marked-places {
         width: 238px;
     }
-} 
+}
+
+
 @media all and (max-width: 550px){
     .marked-places {
         width: 65%;
     }
 }
+
 
 .all_view {
 
@@ -125,6 +141,8 @@ table {
     z-index: 90;
     top: 0;
 }
+
+
 .place-photo {
     width: 50%;
     left: 25%;
@@ -132,6 +150,7 @@ table {
     z-index: 1000;
     position: absolute;
 }
+
 
 .close {
     position: absolute;
@@ -141,6 +160,8 @@ table {
     z-index: 1000;
 
 }
+
+
 .right {
     position: absolute;
     top: 40%;
@@ -149,6 +170,8 @@ table {
     z-index: 1000;
 
 }
+
+
 .left {
     position: absolute;
     top: 40%;
@@ -157,6 +180,8 @@ table {
     z-index: 1000;
 
 }
+
+
 .gallery {
     width: 30px;
     cursor: pointer;
