--- a/css/main.css
+++ b/css/main.css
@@ -186,3 +186,13 @@ table {
     width: 30px;
     cursor: pointer;
 }
+
+
+.infophoto{
+
+    position: absolute;
+    opacity: .3;
+    width: 100%;
+    z-index: 1;
+    top: 0;
+}
